project (yuxServer)
cmake_minimum_required (VERSION 2.6)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(CMAKE_CXX_COMPILER "$ENV{CXX_PATH}")
MESSAGE("Compiler: ${CMAKE_CXX_COMPILER}")

IF (APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
ENDIF()

# C++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MESSAGE("BASE DIR : $ENV{BASE_DIR}")
MESSAGE("GPB DIR : $ENV{GPB_DIR}")
MESSAGE("CXX_FLAGS : ${CMAKE_CXX_FLAGS}")
INCLUDE_DIRECTORIES(. /usr/local/include $ENV{GPB_DIR}/include)
LINK_DIRECTORIES(/usr/local/lib $ENV{BASE_DIR}/install/bin $ENV{GPB_DIR}/lib)

ADD_SUBDIRECTORY(pbout)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(statemachine)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(http)

ADD_EXECUTABLE(yuxServer Main.cpp)
TARGET_LINK_LIBRARIES(yuxServer Pbout Common StateMachine)

ADD_EXECUTABLE(yuHttpd Httpd.cpp)
TARGET_LINK_LIBRARIES(yuHttpd Http pthread)

SET(CMAKE_INSTALL_PREFIX ../../install)
INSTALL(TARGETS yuxServer yuHttpd DESTINATION bin)
