project (yuxServer)
cmake_minimum_required (VERSION 2.6)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(CMAKE_CXX_COMPILER "$ENV{CXX_PATH}")
MESSAGE("Compiler: ${CMAKE_CXX_COMPILER}")

# C++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MESSAGE("BASE DIR : $ENV{BASE_DIR}")
MESSAGE("GPB DIR : $ENV{GPB_DIR}")
MESSAGE("CXX_FLAGS : ${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(. /usr/local/include)
LINK_DIRECTORIES(/usr/local/lib $ENV{BASE_DIR}/install/bin)

IF (DEFINED ENV{GPB_DIR})
    MESSAGE("Need build for GPB")
    INCLUDE_DIRECTORIES($ENV{GPB_DIR}/include)
    LINK_DIRECTORIES($ENV{GPB_DIR}/lib)
    ADD_SUBDIRECTORY(pbout)
    ADD_SUBDIRECTORY(statemachine)
ENDIF()

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(http)

SET(CMAKE_INSTALL_PREFIX ../../install)

IF (DEFINED ENV{GPB_DIR})
    ADD_EXECUTABLE(yuxServer Main.cpp)
    TARGET_LINK_LIBRARIES(yuxServer StateMachine)
    INSTALL(TARGETS yuxServer DESTINATION bin)
ENDIF()

ADD_EXECUTABLE(yuHttpd  Httpd.cpp)
TARGET_LINK_LIBRARIES(yuHttpd Http pthread)

INSTALL(TARGETS yuHttpd DESTINATION bin)
