AUX_SOURCE_DIRECTORY(. DIR_SRCS)
INCLUDE_DIRECTORIES(..)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}/cmake")
#LINK_DIRECTORIES(/home/yxiao2/stack/protobuf/lib)
ADD_LIBRARY(Base SHARED ${DIR_SRCS})
TARGET_LINK_LIBRARIES(Base protobuf)
INSTALL(TARGETS Base LIBRARY DESTINATION bin)
