AUX_SOURCE_DIRECTORY(fastcgi DIR_HTTP_FCGI_SRCS)
#MESSAGE ("FASTCGI PATH: ${DIR_HTTP_FCGI_SRCS}")
AUX_SOURCE_DIRECTORY(. DIR_HTTP_SRCS)
SET(FILES ${DIR_HTTP_FCGI_SRCS} ${DIR_HTTP_SRCS})
#MESSAGE ("HTTP PATH: ${FILES}")
ADD_LIBRARY(Http SHARED ${FILES})

TARGET_LINK_LIBRARIES(Http Base Parser)
INSTALL(TARGETS Http LIBRARY DESTINATION bin)
